# LearningToEmulateChaos_ICML26

./: .gitignore  KOLMOGOROV_TODO.md  README.md  configuration.py  dataloader.sh  pyproject.toml
dataloader/: dataloader_ks.py  dataloader_l63.py  dataloader_l96.py
eval_scripts/: eval_ks.py  eval_l63.py  eval_l96.py  eval_utils.py  plot_l63.py  read_LE.py
experiments/: eval_all_ks.sh  eval_ks_job.sh  eval_ks_sweep_seed.sh  prepare_l63_data.sh  run_eval_ks_once.sh  run_eval_l63_once.sh  run_eval_l63_rollouts_200_500.sh  run_l63_three_methods.sh  run_train_ks_once.sh  run_train_l63_once.sh  submit_all_ks.sh  summary_ks_job.sh  train_ks_sweep_seed.sh
experiments/OT_ks/: eval.sh  eval_partial.sh  sinkhorn.sh  srun.sh  srun_partial.sh  wgan.sh
experiments/OT_l96/: sinkhorn.sh  srun.sh  wgan.sh
experiments/OT_singtraj_ks/: fixed_ot.sh  sinkhorn.sh  srun.sh  wgan.sh  wgan_local.sh
experiments/baselines_ks/: eval.sh  srun.sh
experiments/baselines_l96/: srun.sh
jobs/: run_gen_ks_data.slurm
ks_data_x/: generate_data.py  ks.py
ks_data_x_single_traj/: extend_single_traj_dataset.py  generate.sh  generate_data_single_traj.py  ks.py
l63_data_x/: generate_data.py  l63.py
l96_data_x/: generate_data.py
models/: fno_1d_new.py  mlp_l63.py
scripts/: OT_utils.py  cal_stats_ks.py  cal_stats_l63.py  dataloader_init.py  eval_ks_standalone.py  eval_l63_standalone.py  log.py  main.py  make_l63_attractor_geometry_matrix.py  plot_ks_data.py  summary.py  summary_ks.py  train_utils.py
